# terminal_chat

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: LOGO.ans
src/common/: channel.rs  crypt.rs  id.rs  lib.rs  message.rs  user.rs
