[package]
name = "sticle_full"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[[bin]]
name = "gui"
path = "src/bin/gui/main.rs"

[[bin]]
name = "tester"
path = "src/bin/tester/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.4.0", features = ["serde_with"] }
chrono = { version = "0.4.22", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["net", "full"] }
serde_json = "1.0.50"
tokio-util = { version = "0.7.4", features = ["io", "io-util", "codec"] }
futures = {version = "0.3.25"}
tokio-stream = "0.1.11"
bytes = "1.2.1"
log = "0.4.17"
simplelog = "0.12.0"
egui = {version = "0.19.0"}
eframe = {version = "0.19.0"}
rmp-serde = "1.1.1"
x25519-dalek = { version = "1.2.0", features = ["serde"] }
rand_core = "0.6.4"
